# leptos_chat_app

./: .gitignore  .taurignore  Cargo.toml  Dockerfile  README.md  Trunk.toml  index.html
.github/workflows/: fmt_clippy_test.yml
src/: lib.rs  main.rs
src-orig/: Cargo.toml  index.html
src-orig/src/: fallback.rs  lib.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
steps/: start.md
